kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iobroker
spec:
  selector:
    matchLabels:
      app: iobroker
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: iobroker
      labels:
        app: iobroker
    spec:
      hostname: iobroker
      containers:
      - name: iobroker
        image: angelnu/iobroker:latest
        imagePullPolicy: Always
        # command:
        #   - sh
        #   - -c
        #   - while [ 1 ]; do sleep 10;done
        resources:
          requests:
            memory: "800Mi"
            cpu: "50m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
        ports:
        - containerPort: 8081 #original admin
        - containerPort: 8082 #original vis
        - containerPort: 8084 #original io sockets
        - containerPort: 8087 #original SimpleAPI
        - containerPort: 30000 #hrpc.0
        - containerPort: 30001 #hrpc.1
        - containerPort: 30081 #Reconfigured admin
        - containerPort: 30082 #Reconfigured vis
        - containerPort: 30087 #Reconfigured SimpleAPI
        livenessProbe:
          tcpSocket:
            port: 30081
          initialDelaySeconds: 600 # 10 minutes
          timeoutSeconds: 10
          failureThreshold: 12 # 2 minutes
        volumeMounts:
        - mountPath: /opt/iobroker/iobroker-data
          name: iobroker-volume
        - mountPath: /etc/localtime_host
          name: localtime-volume
      volumes:
        - name: iobroker-volume
          glusterfs:
            endpoints: glusterfs-storage
            path: iobroker
        - name: localtime-volume
          hostPath:
            path: /etc/localtime
            type: File
        #- name: logs
        #  emptyDir: {}

---
# -------------------- Service ------------------- #

kind: Service
apiVersion: v1
metadata:
  labels:
    app: iobroker
  name: iobroker
spec:
  ports:
  - name: admin
    port: 30081
    targetPort: 30081
    nodePort: 30081
  - name: vis
    port: 30082
    targetPort: 30082
    nodePort: 30082
  - name: iosocket
    port: 30084
    targetPort: 30084
    nodePort: 30084
  - name: api
    port: 30087
    targetPort: 30087
    nodePort: 30087
  - name: rfdclient0
    port: 30000
  - name: rfdclient1
    port: 30001
    nodePort: 30001
  - name: admin-org
    port: 8081
    targetPort: 8081
  - name: vis-org
    port: 8082
    targetPort: 8082
  - name: iosocket-org
    port: 8084
    targetPort: 8084
  type: NodePort
  selector:
    app: iobroker

---

# ------------------- Ingress ------------------- #

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iobroker
  annotations:
    ingress.kubernetes.io/whitelist-source-range: "192.168.2.0/16"
spec:
  rules:
  - host: iobroker.angelnu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: iobroker
          servicePort: vis
